fixing up cart spacing, fonts and button styles

--- a/css/cart.css
+++ b/css/cart.css
@@ -23,7 +23,7 @@ body.modal-open {
 /** Shopping cart modal styles **/
 .cart-modal {
   position: fixed;
-  padding:0 5px;
+  padding:0 10px;
   top: 40%;
   left: 50%;
   z-index: 1050;
@@ -33,8 +33,7 @@ body.modal-open {
   overflow-y:hidden;
   margin: -250px 0 0 -445px;
   background-color: white;
-  border: 1px solid #999;
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  border: 5px solid #000;
   outline: none;
   -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
@@ -55,14 +54,15 @@ body.modal-open {
   height:68px;
 }
 .modal-footer-buttons {
-  padding: 0 10px 10px 10px;
+  padding: 5px 0;
 }
 .close-cart-modal {
   width:15px;
   height:15px;
+  text-indent: -9999px !important;
   background:url(../images/close.png) no-repeat top center;
   position:absolute;
-  top:5px;
+  top:10px;
   right:10px;
 }
 /** Shopping cart popover styles */
@@ -97,10 +97,10 @@ body.modal-open {
   right:5px;
 }
 .heading{
-  float:left;
-  width:100%;
-  border-bottom:3px solid #000;
-  padding: 10px 0;
+  float: left;
+  width: 100%;
+  border-bottom: 3px solid #000;
+  padding: 19px 0 3px 0;
 }
 .heading ul{
   /*float:left;*/
@@ -110,7 +110,7 @@ body.modal-open {
 .heading ul li{
   float:left;
   text-align:center;
-  font:16px/16px Helvetica, Arial, sans-serif;
+  font:16px/16px "Helvetica Neue", Helvetica, sans-serif;
   color:#000;
   background:none;
   list-style-type:none;
@@ -124,7 +124,7 @@ body.modal-open {
 .main_heading .shipped_from{
   width:300px;
   margin-left:8px;
-  font:12px/23px Georgia, "Times New Roman", Times, serif;
+  font:12px/23px "Helvetica Neue", Helvetica, sans-serif;
   color:#fff;
   float:left;
 }
@@ -132,7 +132,7 @@ body.modal-open {
   /* display:none; */
   margin-right:5px;
   width:300px;
-  font:10px/23px Georgia, "Times New Roman", Times, serif;
+  font:12px/23px Calibri, "Times New Roman", Times, serif;
   color:#fff;
   float:right;
   text-align:right;
@@ -142,7 +142,7 @@ body.modal-open {
 }
 .main_heading .sub_total{
   float:right;
-  font:17px/23px Georgia, "Times New Roman", Times, serif;
+  font:17px/23px "Helvetica Neue", Helvetica, sans-serif;
   color:#fff;
   padding-right:5px;
 }
@@ -167,12 +167,15 @@ body.modal-open {
   text-align:center;
   list-style-type:none;
   background:none;
-  font:12px Georgia, "Times New Roman", Times, serif;
+  font:12px Calibri, "Times New Roman", Times, serif;
   color:#000;
+}
+.items ul li.item-qty {
+  margin-top:25px;
 }
 .items ul li a{
   float:left;
-  font:10px/15px Georgia, "Times New Roman", Times, serif;
+  font:10px/15px Calibri, "Times New Roman", Times, serif;
   text-transform:uppercase;
 }
 .items ul li .remove{
@@ -225,7 +228,7 @@ body.modal-open {
 }
 .row .right-actions{
   float:right;
-  margin:14px 0;
+  margin:19px 0 0 0;
 }
 .row .right-actions li{
   float:left;
@@ -234,30 +237,32 @@ body.modal-open {
   padding:0;
 }
 .row .right-actions .continue-link{
-  width:153px;
+  width:176px;
   border:1px solid #000;
   cursor:pointer;
   float:left;
   color:#000;
   background:#fff;
   text-align:center;
-  font:14px/17px Georgia, "Times New Roman", Times, serif;
+  text-transform:uppercase;
+  font:14px "Helvetica Neue", Helvetica, sans-serif;
 }
 .row .right-actions .checkout_link{
-  width:83px;
+  width:106px;
   border:none;
   cursor:pointer;
-  float:left;
+  float:right;
   color:#fff;
   background:#000;
   text-align:center;
-  font:14px/19px Georgia, "Times New Roman", Times, serif;
+  text-transform:uppercase;
+  font:14px "Helvetica Neue", Helvetica, sans-serif;
   margin-left:15px;
 }
 
 .row .left-actions{
   float:left;
-  margin:14px 0;
+  margin:19px 0;
 }
 .row .left-actions li{
   float:left;
@@ -272,17 +277,26 @@ body.modal-open {
   border:1px solid #737373;
   margin-right:7px;
   float:left;
-  font:10px/17px Georgia, "Times New Roman", Times, serif;
+  text-transform:uppercase;
+  font:10px/17px "Helvetica Neue", Helvetica, sans-serif;
   color:#818181;
   text-indent:5px;
 }
 .row .left-actions li .clear_link{
   cursor:pointer;
   float:left;
+  width:106px;
   background:#000;
   border:none;
-  font:14px/19px Georgia, "Times New Roman", Times, serif;
+  text-transform:uppercase;
+  font:14px "Helvetica Neue", Helvetica, sans-serif;
   color:#fff;
+}
+
+.clear_link,
+.continue_link,
+.checkout_link {
+  line-height:24px !important;
 }
 
 .fade {
