--- a/css/dev_cart.css
+++ b/css/dev_cart.css
@@ -23,7 +23,7 @@ body.modal-open {
 /** Shopping cart modal styles **/
 .cart-modal {
   position: fixed;
-  padding:0 5px;
+  padding:0 10px;
   top: 40%;
   left: 50%;
   z-index: 1050;
@@ -33,8 +33,7 @@ body.modal-open {
   overflow-y:hidden;
   margin: -250px 0 0 -445px;
   background-color: white;
-  border: 1px solid #999;
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  border: 5px solid #000;
   outline: none;
   -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
@@ -55,7 +54,7 @@ body.modal-open {
   height:68px;
 }
 .modal-footer-buttons {
-  padding: 0 10px 10px 10px;
+  padding: 5px 0;
 }
 .close-cart-modal {
   width:15px;
@@ -63,8 +62,8 @@ body.modal-open {
   text-indent: -9999px !important;
   background:url(../images/close.png) no-repeat top center;
   position:absolute;
-  top:6px;
-  right:6px;
+  top:10px;
+  right:10px;
 }
 /** Shopping cart popover styles */
 .popover {
@@ -133,7 +132,7 @@ body.modal-open {
   /* display:none; */
   margin-right:5px;
   width:300px;
-  font:10px/23px Georgia, "Times New Roman", Times, serif;
+  font:12px/23px Calibri, "Times New Roman", Times, serif;
   color:#fff;
   float:right;
   text-align:right;
@@ -143,7 +142,7 @@ body.modal-open {
 }
 .main_heading .sub_total{
   float:right;
-  font:17px/23px "Helvetica Neue", Helvetica, sans-serif;
+  font:16px/23px "Helvetica Neue", Helvetica, sans-serif;
   color:#fff;
   padding-right:5px;
 }
@@ -168,12 +167,15 @@ body.modal-open {
   text-align:center;
   list-style-type:none;
   background:none;
-  font:12px Georgia, "Times New Roman", Times, serif;
+  font:12px Calibri, "Times New Roman", Times, serif;
   color:#000;
+}
+.items ul li.item-qty {
+  margin-top:25px;
 }
 .items ul li a{
   float:left;
-  font:10px/15px Georgia, "Times New Roman", Times, serif;
+  font:10px/15px Calibri, "Times New Roman", Times, serif;
   text-transform:uppercase;
 }
 .items ul li .remove{
@@ -226,7 +228,7 @@ body.modal-open {
 }
 .row .right-actions{
   float:right;
-  margin:14px 0;
+  margin:19px 0 0 0;
 }
 .row .right-actions li{
   float:left;
@@ -243,24 +245,24 @@ body.modal-open {
   background:#fff;
   text-align:center;
   text-transform:uppercase;
-  font:14px/17px "Helvetica Neue", Helvetica, sans-serif;
+  font:14px "Helvetica Neue", Helvetica, sans-serif;
 }
 .row .right-actions .checkout_link{
   width:106px;
   border:none;
   cursor:pointer;
-  float:left;
+  float:right;
   color:#fff;
   background:#000;
   text-align:center;
   text-transform:uppercase;
-  font:14px/19px "Helvetica Neue", Helvetica, sans-serif;
+  font:14px "Helvetica Neue", Helvetica, sans-serif;
   margin-left:15px;
 }
 
 .row .left-actions{
   float:left;
-  margin:14px 0;
+  margin:19px 0;
 }
 .row .left-actions li{
   float:left;
@@ -287,8 +289,14 @@ body.modal-open {
   background:#000;
   border:none;
   text-transform:uppercase;
-  font:14px/19px "Helvetica Neue", Helvetica, sans-serif;
+  font:14px "Helvetica Neue", Helvetica, sans-serif;
   color:#fff;
+}
+
+.clear_link,
+.continue_link,
+.checkout_link {
+  line-height:24px !important;
 }
 
 .fade {
